# podcastos

./: .env.example  .gitignore  AGENTIC_CONTENT_ENGINE.md  COMPETITIVE_STRATEGY.md  Dockerfile  GOOGLE_FIRST_ARCHITECTURE.md  PODCAST_DISTRIBUTION.md  README.md  STRATEGIC_ROADMAP.md  docker-compose.yml  export_for_notebooklm.py  generate_audio.py  generate_podcast_gemini_tts.py  generate_podcast_notebooklm.py  main.py  podcast_studio.db  pyproject.toml  pytest.ini  railway.json  requirements.txt  run_app.py  run_player.py  scheduler.py  studio.py  test_setup.py  test_tts.py  test_tts2.py
.claude/agents/: db-expert.md  integration-specialist.md  optimizer.md  researcher.md  security-auditor.md  test-runner.md
.claude/rules/: api-integration.md  database.md  github-tracking.md  podcast-domain.md  python-standards.md  testing.md
.github/workflows/: claude-review.yml  google-ai-autoupdate.yml
assets/: cover-art-spec.md
config/: settings.py
docs/: BUILD_PRIORITIES.md  COMPLETE_UX_AUDIT.md  IMPLEMENTATION_PLAN_DEC20.md  PRODUCT_STRATEGY.md  PROFESSIONAL_STUDIO_PLAN.md  QA_FIXES.md  UI_UX_REDESIGN_COMPLETE.md  UX_REDESIGN_EXPLANATION.md
scripts/: create_podcast.py  generate_complete_episode.py  test_podcast.py  upgrade_google_ai.py
scripts/github/: close_issue.sh  list_issues.sh  (+1 more)
src/: __init__.py  podcast_engine.py  rss_generator.py
tests/: conftest.py  test_end_to_end.py  test_studio_edit_flow.py  verify_credentials.py
webapp/: FIXES_V2.md  __init__.py  app.py  generator.py  models.py  podcast_studio.db  rate_limiter.py  scheduler.py  wizard_api.py
(+116 files in other folders)
